# CC3k-

./: .gitignore  CC3k+  CMakeLists.txt  README.md
assets/images/: floorTiles.aseprite  title_screen.aseprite  white_screen.aseprite
assets/shaders/: titleBG.frag
configs/: gameSettings.cfg
src/: game.cpp  game.hpp  main.cpp
src/components/: camera.hpp  floor.hpp  renderable.hpp  transform.hpp
src/core/: types.hpp
src/core/ecs/: component.hpp  componentList.hpp  componentManager.hpp  ecs.hpp  entity.hpp  entityManager.hpp  system.hpp  systemManager.hpp
src/core/managers/: assetsManager.cpp  assetsManager.hpp  configsManager.cpp  configsManager.hpp  gameStateManager.cpp  gameStateManager.hpp  keyboardManager.cpp  keyboardManager.hpp  windowManager.cpp  windowManager.hpp
src/gameStates/: inGameState.cpp  inGameState.hpp  titleState.cpp  titleState.hpp
src/systems/: cameraUpdateSystem.cpp  cameraUpdateSystem.hpp  floorRenderSystem.cpp  floorRenderSystem.hpp  floorUpdateSystem.cpp  floorUpdateSystem.hpp  renderSystem.cpp  renderSystem.hpp
src/utilities/: BSPnode.cpp  BSPnode.hpp  BSPtree.cpp  BSPtree.hpp  utilities.hpp
